# cytoolz-stubs

./: pyproject.toml
src/cytoolz-stubs/: functoolz.pyi  itertoolz.pyi
