[project]
    dependencies    = [
    "typing-extensions>=4.10.0",
]
    description     = "Type stubs for cytoolz"
    name            = "cytoolz-stubs"
    readme          = "README.md"
    requires-python = ">=3.12"
    version         = "0.3.5"

[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.9.18"]

[dependency-groups]
    dev = ["cytoolz>=1.1.0", "ruff>=0.14.9", "pytest-stubtester"]

[tool.uv.sources]
    pytest-stubtester = { git = "https://github.com/OutSquareCapital/pytest-stubtester.git" }
[tool.ruff]
    lint.ignore = [
        "C417",
        "COM812",
        "D401",
        "E501",
        "FIX002",
        "PLC0415",
        "PYI021",
        "S608",
        "SLF001",
        "T201",
        "TC003",
        "TC006",
        "TD002",
        "TD003",
        "TID252",
    ]
    lint.select = ["ALL"]
    [tool.ruff.format]
        docstring-code-format = true
    [tool.ruff.lint.pydocstyle]
        convention = "google"
